--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "^4.17.6",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/mongodb": "^3.5.25",
     "@types/multer": "^1.4.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
